[gd_scene load_steps=2 format=3 uid="uid://keicn88v8766"]

[ext_resource type="Script" path="res://user_interfaces/pause_ui/pause_ui.gd" id="1_m7syu"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m7syu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
